[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PythonSed"
authors = [
  { name="Frank Schäckermann", email="pypi-fschaeckermann@snkmail.com" },
]
description = "This package delivers a fully GNU sed compatible sed implementation in Python."
readme = "README.md"
keywords = [
  "GNU sed",
  "sed",
  "stream editor",
]
license = "GPL-3.0-only"
requires-python = ">=2.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

dependencies = [ ]

dynamic = [ "version" ]

[project.urls]
"Homepage" = "https://github.com/fschaeck/PythonSed"
"Bug Tracker" = "https://github.com/fschaeck/PythonSed/issues"

[project.scripts]
pythonsed = "PythonSed.sed:main"
